Improve description of command keyvault storage remove
Fix for issue [8095](https://github.com/Azure/azure-cli/issues/8095)

--- a/latest/docs-ref-autogen/keyvault/storage.yml
+++ b/latest/docs-ref-autogen/keyvault/storage.yml
@@ -223,7 +223,7 @@ items:
       repo: https://github.com/Azure/azure-cli.git
 - uid: az_keyvault_storage_remove
   name: az keyvault storage remove
-  summary: Deletes a storage account.
+  summary: Removes a Key Vault managed Azure Storage Account and all associated SAS definitions.
   description: This operation requires the storage/delete permission.
   langs:
   - azurecli
